Fixed Blog Page UI, Navbar and Overlapping of Theme Button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,11 +217,11 @@ height: 0;
 }
 
 .slider {
-position: absolute;
 cursor: pointer;
+position: relative;   
+width: 60px;         
+height: 30px;
 top: 0;
-left: 0;
-right: 0;
 bottom: 0;
 background-color: #ccc;
 transition: .4s;
@@ -229,7 +229,7 @@ border-radius: 30px;
 display: flex;
 align-items: center;
 justify-content: space-between;
-padding: 0 5px;
+padding: 5px 10px;
 }
 
 .slider:before {
@@ -239,7 +239,7 @@ height: 22px;
 width: 22px;
 left: 4px;
 bottom: 4px;
-background-color: white;
+background-color: rgba(255, 255, 255, 0.568);
 transition: .4s;
 border-radius: 50%;
 z-index: 2;
@@ -254,21 +254,25 @@ transform: translateX(30px);
 }
 
 .slider .icon {
+position: absolute;
 display: flex;
 align-items: center;
 justify-content: center;
 z-index: 1;
-width: 20px;
-height: 20px;
+width: 15px;
+height: 15px;
 opacity: 0.5;
 transition: opacity 0.3s;
 }
 
 .slider .icon.sun {
+left: 6px;  
 color: #f39c12;
+opacity: 1;
 }
 
 .slider .icon.moon {
+right:6px;
 color: #f5f5f5;
 opacity: 0;
 }
