--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -270,6 +270,7 @@ button, a { transition: var(--transition); }
   display: flex;
   align-items: center;
   gap: 20px;
+  width: 320px;
 }
 
 .header-actions .btn span { display: none; }
